--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>QuickTrace.us — Delivering Speed and Reliability</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <link rel="shortcut icon" href="/QuickTrace Favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="QuickTrace Favicon.png" type="image/x-icon">
 </head>
 <body>
 
   <header>
-    <img src="/QuickTrace.svg" alt="QuickTrace Banner" class="banner" />
+    <img src="QuickTrace.svg" alt="QuickTrace Banner" class="banner" />
   </header>
 
   
