updated the timeline features

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <li><strong>Tracking Code</strong> (a unique code like <code>54TRA8987</code>)</li>
     <li>A direct <strong>Tracking URL</strong> for easy access</li>
   </ul>
-  <p>Use the Order Number and Tracking Code in the fields to track your parcel in real-time. If you need help, reply to the email you received—we’re here to assist!</p>
+  <p>Use the Order Number and Tracking Code in the fields to track your parcel in real-time. If you need help, reply to the email you received about your order delivery or you can mail us below on our email address — we’re here to assist!</p>
 </div>
 
   <script src="script.js"></script>
